--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,6 @@
   </head>
   <body>
     <div id="content"></div>
-    <script type="text/babel">
-    </script>
+    <script type="text/babel" src="scripts/tutorial.js">
   </body>
 </html>
